--- a/my-app/src/styles/globals.css
+++ b/my-app/src/styles/globals.css
@@ -45,15 +45,14 @@ label {
 
 .member-list {
     text-align: center;
+    margin-bottom: 3rem;
 }
 
 footer {
-    margin-top: 2em;
     text-align: center;
     color: #fff;
     background: #f76c6c;
-    padding: 0.25em 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
